--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,3 @@
 server.port=7000
 server.timeout=15000
-server.socketHandlerFactory=com.github.noahlz.sockets.SimulatedWorkSocketHandlerFactory
+server.socketHandlerFactory=example.SimulatedWorkSocketHandlerFactory
